Fixed joystick position in mobile devices and added margin-top to sensors--dashboard on mobile to visualize the sensor value correctly.

--- a/scss/general/legacy_style.scss
+++ b/scss/general/legacy_style.scss
@@ -138,6 +138,10 @@ main {
     border: 10px solid var(--brand-color);
     border-radius: 23px;
 
+    #joystick--canvas {
+        padding-top: 5rem;
+    }
+
     .dir--keys {
         display: flex;
         flex-direction: column;
@@ -564,6 +568,9 @@ footer ul li {
     }
     .gamepad {
         width: 90%;
+        #joystick--canvas {
+            padding-top: 0rem;
+        }
     }
     .arrow, .stop--button {
         background-size: 70%;
@@ -584,12 +591,18 @@ footer ul li {
     .tumbler-night {
         transform: translateX(calc(100% - -5px));
     }
+    #sensors--dashboard {
+        margin-top: 5rem;
+    }
     .functions .function--btn {
         width: 60px;
         height: 60px;
         margin: 0 1rem;
         padding: 0 0.5rem;
         font-size: 2.5rem;
+    }
+    footer {
+        margin-top: 2rem;
     }
     footer span {
         font-size: 1rem;
